refactor(env): add env variable for calendarific implementation

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ APP_URL=http://localhost
 FILE_UPLOAD_ENDPOINT=
 DASHBOARD_TIMEZONE=
 
+CALENDARIFIC_API_KEY=
+CALENDARIFIC_COUNTRY_CODE=
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
